--- a/cog.yaml
+++ b/cog.yaml
@@ -3,12 +3,13 @@ build:
   cuda: "11.8"
   python_version: "3.11.1"
   python_packages:
-    - "diffusers==0.11.1"
-    - "torch==1.13.0"
+    - "diffusers==0.22.1"
+    - "torch==2.1.0"
     - "ftfy==6.1.1"
-    - "scipy==1.9.3"
-    - "transformers==4.25.1"
-    - "accelerate==0.15.0"
-    - "huggingface-hub==0.13.2"
+    - "scipy==1.11.3"
+    - "transformers==4.35.0"
+    - "accelerate==0.24.1"
+    - "huggingface-hub"
+    - "git+https://github.com/openai/consistencydecoder.git"
 
 predict: "predict.py:Predictor"
