--- a/cog.yaml
+++ b/cog.yaml
@@ -3,12 +3,16 @@ build:
   cuda: "11.8"
   python_version: "3.11.1"
   python_packages:
-    - "diffusers==0.22.1"
+    - "diffusers==0.23.1"
     - "ftfy==6.1.1"
     - "scipy==1.11.3"
     - "transformers==4.35.0"
     - "accelerate==0.24.1"
     - "huggingface-hub"
-    - "git+https://github.com/openai/consistencydecoder.git"
+    # - "git+https://github.com/openai/consistencydecoder.git"
     - "torch==2.0.1"
+
+  run:
+    - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/download/v0.0.6/pget" && chmod +x /usr/local/bin/pget
+
 predict: "predict.py:Predictor"
